Fix content displaying on mobile

--- a/web/app/themes/rizikove_kaceni_sage_based/assets/styles/layouts/_pages.scss
+++ b/web/app/themes/rizikove_kaceni_sage_based/assets/styles/layouts/_pages.scss
@@ -16,10 +16,19 @@
   top: 20px;
   opacity: 0;
 
-  transition: opacity 0.5s, top 0.5s;
+  -webkit-transition: opacity 0.5s linear 1s, top 0.5s linear 1s;
+  -moz-transition: opacity 0.5s linear 1s, top 0.5s linear 1s;
+  -ms-transition: opacity 0.5s linear 1s, top 0.5s linear 1s;
+  -o-transition: opacity 0.5s linear 1s, top 0.5s linear 1s;
+  transition: opacity 0.5s linear 1s, top 0.5s linear 1s;
 
   &.home-page{
     padding: 0;
+  }
+
+  &--show{
+    top: 0;
+    opacity: 100;
   }
 
   @include modular-mq(tablet){
@@ -33,10 +42,6 @@
     -o-transition: opacity 0.5s linear 1s, top 0.5s linear 1s;
     transition: opacity 0.5s linear 1s, top 0.5s linear 1s;
 
-    &--show{
-      top: 0;
-      opacity: 100;
-    }
   }
 
   @include modular-mq(desktop){
